<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="you_can_convert_your_currency_to_other_currency_rate">You can convert your currency to other currency rate</string>
    <string name="convert">Convert</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string-array name="currency_codes">
        <item>EUR</item>
        <item>CAD</item>
        <item>EUR</item>
        <item>HKD</item>
        <item>ISK</item>
        <item>PHP</item>
        <item>DKK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>AUD</item>
        <item>RON</item>
        <item>SEK</item>
        <item>IDR</item>
        <item>INR</item>
        <item>BRL</item>
        <item>RUB</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>CHF</item>
        <item>SGD</item>
        <item>PLN</item>
        <item>BGN</item>
        <item>CNY</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>USD</item>
        <item>MXN</item>
        <item>ILS</item>
        <item>GBP</item>
        <item>KRW</item>
        <item>MYR</item>
    </string-array>
</resources>